import java.util.HashSet;

public class Escenario {
    private boolean tieneLugarDePrensa;

    public Escenario(boolean tieneLugarDePrensa) {
        this.tieneLugarDePrensa = tieneLugarDePrensa;
    }

    public boolean isTieneLugarDePrensa() {
        return tieneLugarDePrensa;
    }
}
