public class TicketPlus extends Ticket{

    @Override
    public boolean entradaValida(Artista artista) {
        return true;
    }
}
